DROP7:
-Continue merging of Debian patches
o 11opt_sendmail_path: specify sendmail prog path
o 14opt_mailto: specify mailto address
o 15opt_username: drop privileges to this username (without restart)

-Disable savestr() - functionality covered by strndup()
-Make replacement strndup() safer with checks
-Drop into daemon mode the latest possible moment
o replace some syslog() calls with fprintf()s

DROP6:
-Merge a lot of vendor fixes from Debian (thanks to Peter Kelemen)
o 06debian_manpages: man-pages for arpfetch, arp2ethers
o 21arp2ethers: misc. awk fixes
o 26unconf_iface: continue if unconfigured interface, but don't use syslog()
o 25ignore_zero_ip: don't enter IP 0.0.0.0 into db
o 22secure_tempfile: use a secure tmpfile name in bihourly, mkdep and arpfetch
o 07debian_srcdir: add some missing $(srcdir)
o 12opt_nopromisc: -p not enter the device promisc mode
o 05debian_fhs: ethercodes into share/arpwatch, arp.dat into var/lib/arpwatch

-Add more fprintf(stderr, ...) on failures and make error reporting better
-Misc cleanups

DROP5:
-Remove #ifdef DEBUG altogether - enabled by default, so what.
 Since DROP2 I had no luck with stable releases, sorry.
-Add first & dirty make install hack to install necessary files
-Reorg and simplify arpwatch.c initialization code

DROP4.1:
-Some systems don't have strndup() - sorry, overread that it's a GNU extension
 so let configure check and have a replacement function ready [QUICKFIX]
 Thanks to Jim Sandoz

DROP4:
-Compile fix for arpwatch.c - report_mode was missing
-Segfault fix for arpwatch.c<-report.c: report_f was not initialized
-Apply vendor security patch against hostname overflow + strcpy()->strncpy()
-Shorten checkpoint time from 15 to 10 minutes (even lower values sensible?)

DROP3:
-Close stdin/out/err in daemon mode again
-report() is now a dispatching function for the actual reporting function
-Change notification codes from clear-text("new station") to int
-Add defines for the former and lookup table