@@ -23,6 +23,10 @@ AC_HEADER_TIME
 
 AC_REPLACE_FUNCS(bcopy strerror strndup)
 
+AC_ARG_ENABLE( fancy-mac,
+[  --enable-fancy-mac	  always print MAC adresses in full xx:xx notation  [default=no]],,
+		enable_fancy_mac="no")
+
 dnl The following generates a warning from autoconf...
 AC_C_BIGENDIAN
 
@@ -157,12 +161,16 @@ if test ! -r $srcdir/addresses.h ; then
 	cp $srcdir/addresses.h.in $srcdir/addresses.h
 fi
 
+if test "x$enable_fancy_mac" = "xyes"; then
+  	FANCY_MAC=1
+fi
+
 AC_SUBST(V_CCOPT)
 AC_SUBST(V_INCLS)
 AC_SUBST(V_PCAPDEP)
 AC_SUBST(V_SENDMAIL)
 AC_SUBST(LBL_LIBS)
-
+AC_SUBST(FANCY_MAC)
 AC_PROG_INSTALL
 
 AC_OUTPUT(Makefile)
